# topicgen

./: .env  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  ISSUE_TEMPLATE  LICENSE  README.md  app.py  dependabot.yml  docker-compose.yml  gradio_app.py  main.py  model.onnx  pyproject.toml  renovate.json  requirements-dev.txt  requirements.txt  requirments.txt
.github/: CODEOWNERS  ISSUE_TEMPLATE  PULL_REQUEST_TEMPLATE
.github/conda/: meta.yml
.github/workflows/: autopr.yml  ci-cd.yml  ci.yml  conda-publish.yml  dependabot.yml  pre-commit.yml  test.yml  triggers.yml
data/: topicgen.db
models/: topic_mapping.json
models/pytorch_model/: config.json
scripts/: __init__.py  analyzer.py  error_handler.py  fetcher.py  github_analyzer.py  topic_list.py  utils.py
tests/: test_analyzer.py  test_basic.py  test_fetcher.py
topic_gen/: __init__.py  analyzer.py  fetcher.py  topic_hierarchy.py
topicgen/: __init__.py  config.py
topicgen/data_collector/: __init__.py  github_api.py  models.py  repository_fetcher.py  topic_collector.py
topicgen/database/: __init__.py  data_store.py  db_client.py  schema.py  sqlite_client.py  sqlite_schema.py  supabase_client.py
topicgen/models/: __init__.py  data_preprocessor.py  dataset.py  hyperparameter_tuning.py  model_exporter.py  trainer.py  training_optimization.py
topicgen/pipelines/: __init__.py  data_collection_pipeline.py  model_training_pipeline.py
topicgen/utils/: cli.py  config.py
utils/: __init__.py  debug.py  logger.py
