[tool.poetry]
name = "topicgen"
version = "0.1.2"
description = "Topic generator using transformers"
authors = ["Namgyu-Youn <yynk2012@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "topicgen", from = "src" },
    { include = "scripts" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
gradio = "^5.9.1"
torch = {version = "^2.5.1", source = "pytorch", extras = ["cpu"]}
transformers = "^4.47.1"
aiohttp = "^3.11.11"
python-dotenv = "^1.0.1"
ruff = "^0.8.5"
tiktoken = "^0.5.2"
protobuf = "^4.25.3"
sentencepiece = "^0.1.99"
tokenizers = ">=0.21,<0.22"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 140
target-version = "py310"

lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "RUF",  # Ruff-specific rules
    "I",    # isort
    "C4",   # flake8-comprehensions
    "N",    # pep8-naming
    "S",    # flake8-bandit
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "S101"]
"scripts/*" = ["T20"]