[tool.poetry]
name = "topicgen"
version = "0.1.4"
description = "Topic generator using transformers"
authors = ["Namgyu-Youn <yynk2012@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "topicgen"}
]

[tool.poetry.dependencies]
python = ">=3.13.2,<3.14"
onnx = "^1.17.0"
onnxruntime = "^1.17.0"
transformers = "^4.40.0"
torch = {version = "2.6.0+cpu", source = "pytorch"}
ruff = "^0.9.9"
tiktoken = "^0.8.0"
aiohttp = "^3.11.11"
pytest = "^8.3.4"
gradio = "^5.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-asyncio = "^0.25.3"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.pytest.ini_options]
pythonpath = ["src", "scripts"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/topicgen"]

[build-system]
requires = ["poetry-core>=2.0.1"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 140
target-version = "py310"

lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "RUF",  # Ruff-specific rules
    "I",    # isort
    "C4",   # flake8-comprehensions
    "N",    # pep8-naming
    "S",    # flake8-bandit
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "S101"]
"scripts/*" = ["T20"]