[project]
name = "topicgen"
version = "0.2.0"
description = "Topic generator using transformers"
authors = [
    {name = "Namgyu-Youn", email = "yynk2012@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11.0,<3.13"
dependencies = [
    "transformers>=4.49.0",
    "torch==2.7.0",
    "torchvision>=0.18.0",
    "torchaudio>=2.7.0",
    "ruff>=0.9.9",
    "tiktoken>=0.9.0",
    "aiohttp>=3.11.11",
    "pytest>=8.3.4",
    "gradio>=5.19.0",
    "dotenv>=0.9.9",
    "asyncio>=3.4.3",
    "supabase>=2.13.0",
    "scikit-learn>=1.6.1",
    "tqdm>=4.67.1",
    "requests>=2.32.3",
]

[project.optional-dependencies]
dev = [
    # CPU version for development and testing
    "torch==2.7.0",
    "torchvision>=0.18.0",
    "torchaudio>=2.7.0",
    # Testing tools
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.25.3",
    "ruff>=0.9.9",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 160
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "S101"]
